ensure toc-sticky overlaps content below

--- a/express/code/blocks/toc-seo/toc-seo.css
+++ b/express/code/blocks/toc-seo/toc-seo.css
@@ -204,7 +204,7 @@ main .toc-content a:focus:not(:focus-visible) {
   }
 
   .toc.toc-container.toc-mobile-fixed {
-    z-index: 1;
+    z-index: 2;
   }
 
   .toc-container .toc-content {
